# r2r-khaki-avatar-feature

./: .gitignore  README.md  TOPOLOGY.md  pyproject.toml  topology.yml
.kiro/specs/pet-avatar-generation/: design.md  tasks.md
docs/: POSTMAN_GUIDE.md
functions/presigned-url-handler/: handler.py
functions/process-handler/: handler.py
functions/process-worker/: handler.py
functions/result-handler/: handler.py
functions/s3-event-handler/: handler.py
functions/status-handler/: handler.py
petavatar-agent/: foo.py
presigned-url-handler/: handler.py
process-handler/: handler.py
result-handler/: handler.py
scripts/: README.md  configure-lambda-env.py  configure-s3-events.py  create-infrastructure.py  destroy-infrastructure.py  test-api-e2e.sh
src/: __init__.py
src/agent/: __init__.py
src/agent/tools/: __init__.py
src/handlers/: __init__.py
src/utils/: __init__.py
status-handler/: handler.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_workflow.py  test_error_scenarios.py  test_presigned_url_flow.py  test_s3_event_flow.py  test_security_config.py
