[project]
name = "petavatar"
version = "0.1.0"
description = "AI-powered service that transforms pet photos into professional human avatars"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "strands-agents>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
